Overlapping elements fixes

--- a/src/components/Viewer/ViewerMap/Helpers/GeoMessage.css
+++ b/src/components/Viewer/ViewerMap/Helpers/GeoMessage.css
@@ -182,7 +182,6 @@ div.slide-pane__content .GeoMessageContainer.feed>button
 
 div.slide-pane__content #formDiv
 {
-  max-height: calc(50vh - 2.25em - 32px);
   padding: 1em;
 }
 
